svg animation to circle

--- a/project/static/js/.babelrc
+++ b/project/static/js/.babelrc
@@ -5,6 +5,7 @@
         ["@babel/plugin-transform-react-jsx", {
             "pragma": "m",
             "pragmaFrag": "'['"
-        }]
+        }],
+        "transform-class-properties"
     ]
 }
