--- a/project/static/js/package.json
+++ b/project/static/js/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "animejs": "^3.2.0",
+    "interactjs": "^1.9.17",
     "leaflet": "^1.6.0",
     "mithril": "^2.0.4",
     "promise-polyfill": "8.1.3",
