--- a/project/static/js/.babelrc
+++ b/project/static/js/.babelrc
@@ -6,6 +6,7 @@
             "pragma": "m",
             "pragmaFrag": "'['"
         }],
-        "transform-class-properties"
+        "transform-class-properties",
+        "@babel/plugin-transform-runtime"
     ]
 }
