--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,14 @@
 alembic==1.4.2
 astroid==2.4.0
 Babel==2.8.0
+certifi==2020.4.5.1
+chardet==3.0.4
 click==7.1.2
 dnspython==1.16.0
 email-validator==1.1.0
 Flask==1.1.2
 Flask-Babel==1.0.0
+Flask-HTTPAuth==4.0.0
 Flask-Migrate==2.5.3
 Flask-SQLAlchemy==2.4.1
 Flask-WTF==0.14.3
@@ -18,14 +21,17 @@ lazy-object-proxy==1.4.3
 Mako==1.1.2
 MarkupSafe==1.1.1
 mccabe==0.6.1
+Pillow==7.1.2
 pylint==2.5.0
 python-dateutil==2.8.1
 python-editor==1.0.4
 pytz==2020.1
+requests==2.23.0
 six==1.14.0
 SQLAlchemy==1.3.16
 toml==0.10.0
 typed-ast==1.4.1
+urllib3==1.25.9
 Werkzeug==1.0.1
 wrapt==1.12.1
 WTForms==2.3.1
