--- a/project/static/js/package.json
+++ b/project/static/js/package.json
@@ -16,6 +16,7 @@
     "imagesloaded": "^4.1.4",
     "interactjs": "^1.9.17",
     "leaflet": "^1.6.0",
+    "masonry-layout": "^4.2.2",
     "mithril": "^2.0.4",
     "promise-polyfill": "8.1.3",
     "whatwg-fetch": "^3.0.0"
