--- a/project/static/js/package.json
+++ b/project/static/js/package.json
@@ -17,6 +17,7 @@
     "interactjs": "^1.9.17",
     "leaflet": "^1.6.0",
     "masonry-layout": "^4.2.2",
+    "mdn-polyfills": "^5.20.0",
     "mithril": "^2.0.4",
     "promise-polyfill": "8.1.3",
     "whatwg-fetch": "^3.0.0"
