--- a/project/static/js/package.json
+++ b/project/static/js/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@babel/runtime": "^7.10.0",
     "animejs": "^3.2.0",
+    "glightbox": "^3.0.0",
     "imagesloaded": "^4.1.4",
     "interactjs": "^1.9.17",
     "leaflet": "^1.6.0",
