chores: new db and update gitignore and css

--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,9 @@
 config.py
 .vscode/
 app.db
+project/static/img/steine/*
+project/static/img/user_images/*
+
 
 # Byte-compiled / optimized / DLL files
 __pycache__/
