--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 alembic==1.4.2
 astroid==2.4.0
 Babel==2.8.0
+blinker==1.4
 certifi==2020.4.5.1
 chardet==3.0.4
 click==7.1.2
@@ -9,6 +10,7 @@ email-validator==1.1.0
 Flask==1.1.2
 Flask-Babel==1.0.0
 Flask-HTTPAuth==4.0.0
+Flask-Mail==0.9.1
 Flask-Migrate==2.5.3
 Flask-SQLAlchemy==2.4.1
 Flask-WTF==0.14.3
@@ -22,6 +24,7 @@ Mako==1.1.2
 MarkupSafe==1.1.1
 mccabe==0.6.1
 Pillow==7.1.2
+pkg-resources==0.0.0
 pylint==2.5.0
 python-dateutil==2.8.1
 python-editor==1.0.4
