--- a/project/static/js/package.json
+++ b/project/static/js/package.json
@@ -11,26 +11,27 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@babel/runtime": "^7.10.0",
-    "animejs": "^3.2.0",
-    "glightbox": "^3.0.0",
+    "@babel/runtime": "^7.12.5",
+    "animejs": "^3.2.1",
+    "glightbox": "^3.0.7",
     "imagesloaded": "^4.1.4",
-    "interactjs": "^1.9.17",
+    "interactjs": "^1.10.2",
+    "lazyload": "^2.0.0-rc.2",
     "leaflet": "^1.6.0",
     "masonry-layout": "^4.2.2",
     "mdn-polyfills": "^5.20.0",
     "mithril": "^2.0.4",
     "promise-polyfill": "8.1.3",
-    "whatwg-fetch": "^3.0.0"
+    "whatwg-fetch": "^3.5.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.9.6",
-    "@babel/plugin-transform-react-jsx": "^7.9.4",
-    "@babel/plugin-transform-runtime": "^7.10.0",
-    "@babel/preset-env": "^7.9.6",
-    "babel-loader": "^8.1.0",
+    "@babel/core": "^7.12.10",
+    "@babel/plugin-transform-react-jsx": "^7.12.12",
+    "@babel/plugin-transform-runtime": "^7.12.10",
+    "@babel/preset-env": "^7.12.11",
+    "babel-loader": "^8.2.2",
     "babel-plugin-transform-class-properties": "^6.24.1",
-    "webpack": "^4.43.0",
+    "webpack": "^4.46.0",
     "webpack-cli": "^3.3.11"
   }
 }
