--- a/requirements.txt
+++ b/requirements.txt
@@ -5,9 +5,11 @@ blinker==1.4
 certifi==2020.4.5.1
 chardet==3.0.4
 click==7.1.2
+cssmin==0.2.0
 dnspython==1.16.0
 email-validator==1.1.0
 Flask==1.1.2
+Flask-Assets==2.0
 Flask-Babel==1.0.0
 Flask-HTTPAuth==4.0.0
 Flask-Mail==0.9.1
@@ -19,6 +21,7 @@ idna==2.9
 isort==4.3.21
 itsdangerous==1.1.0
 Jinja2==2.11.2
+jsmin==2.2.2
 lazy-object-proxy==1.4.3
 Mako==1.1.2
 MarkupSafe==1.1.1
@@ -34,6 +37,7 @@ SQLAlchemy==1.3.16
 toml==0.10.0
 typed-ast==1.4.1
 urllib3==1.25.9
+webassets==2.0
 Werkzeug==1.0.1
 wrapt==1.12.1
 WTForms==2.3.1
