--- a/project/static/js/package.json
+++ b/project/static/js/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "webpack -d --watch",
-    "build": "webpack -p"
+    "start": "webpack --mode=development --watch",
+    "build": "webpack --mode=production"
   },
   "keywords": [],
   "author": "",
@@ -19,9 +19,9 @@
     "lazyload": "^2.0.0-rc.2",
     "leaflet": "^1.6.0",
     "masonry-layout": "^4.2.2",
-    "mdn-polyfills": "^5.20.0",
     "mithril": "^2.0.4",
     "promise-polyfill": "8.1.3",
+    "mdn-polyfills": "^5.20.0",
     "whatwg-fetch": "^3.5.0"
   },
   "devDependencies": {
@@ -31,7 +31,7 @@
     "@babel/preset-env": "^7.12.11",
     "babel-loader": "^8.2.2",
     "babel-plugin-transform-class-properties": "^6.24.1",
-    "webpack": "^4.46.0",
-    "webpack-cli": "^3.3.11"
+    "webpack": "^5.68.0",
+    "webpack-cli": "^4.9.2"
   }
 }
